public/stylesheets/style.css
body {
  font-family: disco;
  font-weight: bold;
  background: #F8F8F8;
  height: 100%;
}

li {
  list-style-type: none;
  text-align: center;
}

.car-list {
  margin: 0 8vw 0 8vw;
  text-align: center
}

.car-item {
  margin: 2vw;
  list-style-type: none;

}

.car-item:nth-child(0) {
  width: 80vw;
  height: 40vh;
}


.car-item:nth-child(-n+2) {
  width: 40vw;
  height: 20vh;
}

#menu, .container {
  display: inline-block;
}

.container {
  width: 85%;
  margin-left: 18%;
}

#menu {
  position: fixed;
  background: #2D3142;
  width: 190px;
  height: 100vh;
}


h1 {
  text-align: center;
}


.centered {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
}

.card {
  margin: 5px;
  text-align: center;
  display: inline-block;
}


section.home .cars{
  margin-left: 140px;
}

/*add new car*/
.new-car{

}

/*login*/
section.login {
  text-align: center;
  margin-top: 100px;
  outline: #F8F8F8;
}

.login-box{
  margin-top: 150px;
  margin-left: 20px;
}

.pure-button-primary {
  margin-top: 150px;
  color: #F8F8F8;
}


/*register*/
section.register {
  text-align: center;
  outline: #F8F8F8;
}

.pure-button{
  background: #2D3142;
  border-radius: 20px;
  box-shadow: 3px 4px 2px 0px #8D99AE;
  color: #F8F8F8;
}

.pure-button:hover {
  background: #2D3142;
  border-radius: 20px;
  box-shadow: none;

}

